# trading-api-wrappers

./: .env.example  .gitignore  .pyup.yml  LICENSE  Pipfile  README.md  README.rst  base.py  common.py  pyproject.toml  requierements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
bitfinex/: __init__.py  client.py  client_auth.py  client_public.py  constants.py
btcvol/: __init__.py  client.py
coindesk/: __init__.py  client.py
surbtc/: __init__.py  client.py
test/: bitcoinity_test.py  bitfinex_test.py  bitfinex_v2_test.py  bitstamp_test.py  btcvol_test.py  buda_test.py  coindesk_test.py  coinmarketcap_test.py  cryptomkt_test.py  currencylayer_test.py  kraken_test.py  surbtc_test.py
tests/: bitcoinity_test.py  bitex_test.py  bitfinex_test.py  bitfinex_v2_test.py  bitstamp_test.py  buda_test.py  coindesk_test.py  coinmarketcap_test.py  cryptomkt_test.py  currencylayer_test.py  kraken_test.py  ripio_test.py  sfox_test.py
trading_api_wrappers/: __init__.py  __version__.py  _version.py  auth.py  base.py  common.py  errors.py  logger.py
trading_api_wrappers/bitcoinity/: __init__.py  client.py
trading_api_wrappers/bitex/: __init__.py  client_public.py  models.py
trading_api_wrappers/bitfinex/: __init__.py  client_auth.py  client_auth_v1.py  client_public.py  client_public_v1.py  client_public_v2.py  client_standard.py  constants.py  constants_v1.py  constants_v2.py  models_v2.py  server.py
trading_api_wrappers/bitstamp/: __init__.py  client_auth.py  client_public.py  client_standard.py  constants.py  server.py
trading_api_wrappers/btcvol/: __init__.py  client.py
trading_api_wrappers/buda/: __init__.py  client_auth.py  client_public.py  client_standard.py  constants.py  models.py  server.py
trading_api_wrappers/coindesk/: __init__.py  client.py
trading_api_wrappers/coinmarketcap/: __init__.py  client.py
trading_api_wrappers/cryptomkt/: __init__.py  client.py  client_auth.py  client_public.py  client_standard.py  constants.py  models.py  server.py
trading_api_wrappers/currencylayer/: __init__.py  client.py
trading_api_wrappers/kraken/: __init__.py  client_auth.py  client_public.py  client_standard.py  constants.py  server.py
trading_api_wrappers/oxr/: __init__.py  client.py
trading_api_wrappers/ripio/: __init__.py  clients.py  models.py
trading_api_wrappers/sfox/: __init__.py  client_public.py  constants.py  models.py
trading_api_wrappers/surbtc/: __init__.py  client.py  client_auth.py  client_public.py  client_standard.py  constants.py  models.py  server.py
trading_api_wrappers/xapo/: client_standard.py
