[tool.poetry]
name = "trading-api-wrappers"
version = "0.17.1"
description = "Clients for popular Crypto Exchanges and other useful services"
authors = ["Felipe Aranguiz <faranguiz575@gmail.com>, Sebastian Aranguiz <sarang575@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
backoff = "^1.11.1"
requests = "^2.26.0"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
python-decouple = "^3.4"
coverage = "^5.5"
pytest = "^6.2.4"
twine = "^3.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
